--- a/angular/package.json
+++ b/angular/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.1",
     "@angular/http": "^7.2.16",
     "@angular/material": "^11.0.3",
@@ -25,6 +26,7 @@
     "@material/dialog": "^8.0.0",
     "angular-bootstrap-md": "^10.1.1",
     "bootstrap": "^4.5.3",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
