--- a/angular/angular.json
+++ b/angular/angular.json
@@ -30,7 +30,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/font-awesome/scss/font-awesome.scss"
             ],
             "scripts": []
           },
