--- a/angular/package.json
+++ b/angular/package.json
@@ -23,13 +23,19 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@material/dialog": "^8.0.0",
     "angular-bootstrap-md": "^10.1.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
+    "material-dynamic-table": "^9.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
